[package]
name = "meilidex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = "0.4.29"
clap = { version = "4.4.1", features = ["derive"] }
digest = "0.10.7"
env_logger = "0.10.0"
ignore = { version = "0.4.20", features = ["simd-accel"] }
log = "0.4.20"
md-5 = { version = "0.10.5", features = ["asm"] }
num_cpus = "1.16.0"
serde_json = "1.0.105"
url = "2.4.1"
