[package]
name = "meilidex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
digest = "0.10"
env_logger = "0.10"
ignore = { version = "0.4", features = ["simd-accel"] }
log = "0.4"
md-5 = { version = "0.10", features = ["asm"] }
num_cpus = "1.16"
serde_json = "1.0"
url = "2.4"
